Pirozhki-ELK 0.3.3, 2015-07-18
--------------------------
- Define Pirozhki version
- Add newrelic and session_secret configs

Pirozhki-ELK 0.3.2, 2015-07-12
--------------------------
- Rename project from `Pirozhki-docker` to `Pirozhki-ELK`.
- Remove `post_` prefix from logstash data.

Pirozhki-ELK 0.3.1, 2015-06-14
--------------------------
- Change logstash index pattern from daily to monthly basis.

Pirozhki-ELK 0.3.0, 2015-06-14
--------------------------
- Breaking changes: upgrade postgres, redis, nginx, elasticsearch images.
- Move data-only container to docker-compose.yml.
- Use elasticsearch `official` image.
- Rename fig to docker-compose.

Pirozhki-ELK 0.2.0, 2014-12-30
--------------------------
- Change docker restart policy (restart: always).
- Add nginx.
- Add default kibana template.
- Add standalone elasticsearch.
- Add logstash.

Pirozhki-ELK 0.1.0, 2014-12-09
--------------------------
- Initial release.