@@ -4,5 +4,6 @@
 :queues:
   - [request_manager, 1]
   - [load_from_source, 1]
+  - [rollbar, 1]
   - [build_post, 3]
   - [export_post, 3]
